kagi-mcp/src/format/snapshots/kagi_mcp__format__search__tests__when_search_has_podcast_creator_then_should_format.snap
---
source: kagi-mcp/src/format/search.rs
expression: "format_search_markdown(&response).unwrap().replace(\"\\r\\n\", \"\\n\")"
---
## Podcast Creators

1. **[Creator One](https://example.com/creator1)**
   - Snippet: A great podcast creator.
   - Published: 2024-01-15
