kagi-mcp/src/format/snapshots/kagi_mcp__format__search__tests__when_search_has_related_searches_then_should_format.snap
---
source: kagi-mcp/src/format/search.rs
expression: "format_search_markdown(&response).replace(\"\\r\\n\", \"\\n\")"
---
## Related Searches

- Related Topic
