kagi-mcp/src/format/snapshots/kagi_mcp__format__search__tests__when_search_has_weather_with_multiple_entries_then_should_show_all.snap
---
source: kagi-mcp/src/format/search.rs
expression: "format_search_markdown(&response).replace(\"\\r\\n\", \"\\n\")"
---
## Weather

Monday: Sunny, 25°C
Tuesday: Cloudy, 20°C
