kagi-mcp/src/format/snapshots/kagi_mcp__format__search__tests__when_search_has_web_results_then_should_format_web_section.snap
---
source: kagi-mcp/src/format/search.rs
expression: "format_search_markdown(&response).unwrap().replace(\"\\r\\n\", \"\\n\")"
---
## Web Results

1. [Example](https://example.com)
   - Snippet: This is an example.
   - Published: 2023-01-01
