kagi-mcp/src/format/snapshots/kagi_mcp__format__search__tests__when_search_result_has_multiple_props_then_should_render_all.snap
---
source: kagi-mcp/src/format/search.rs
expression: "format_search_markdown(&response).unwrap().replace(\"\\r\\n\", \"\\n\")"
---
## Web Results

1. [Example](https://example.com)
   - Snippet: This is an example.
   - Language: fr
   - Paywalled: true
   - AI Content: generated
