kagi-mcp/src/format/snapshots/kagi_mcp__format__search__tests__when_search_result_has_paywalled_false_then_should_not_render_paywalled.snap
---
source: kagi-mcp/src/format/search.rs
expression: "format_search_markdown(&response).replace(\"\\r\\n\", \"\\n\")"
---
## Web Results

1. **[Example](https://example.com)**
   - Snippet: This is an example.
